--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -9,7 +9,7 @@
     border: 1px solid var(--color-border-placeholder);
     border-radius: 10px;
     padding: 0px 15px;
-    background: var(--color-input);
+    background: var(--color-highlight-bg);
     box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
 }
 
@@ -21,7 +21,7 @@
     font-size: 14px;
     margin: 0 10px;
     color: var(--color-text-primary);
-    background: var(--color-input);
+    background: var(--color-highlight-bg);
 }
 
 .searchContainer:focus-within {
