--- a/src/Components/WeatherCard/WeatherCard.css
+++ b/src/Components/WeatherCard/WeatherCard.css
@@ -2,6 +2,7 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+    background: var(--color-highlight-bg);
 }
 
 .mainRow {
@@ -29,7 +30,7 @@
 
 .infoBox {
     width: 38%;
-    background: var(--color-secondary);
+    background: var(--color-highlight);
     padding: 10px 15px;
     text-align: left;
 }
